[package]
name = "iter_help"
version = "0.1.0"
edition = "2021"
authors = ["Austin Heller"]
description = "This library provides helpful tools for iterating over collections of data."
readme = "README.md"
repository = "https://github.com/AustinHellerRepo/iter_help"
license = "MIT OR Apache-2.0"
keywords = ["utility", "library", "iterator", "optimization", "algorithm"]
categories = ["algorithms"]

[dependencies]
paste = { version = "1.0.15" }